[gd_scene load_steps=17 format=3 uid="uid://b5ns3u04dt05o"]

[ext_resource type="Texture2D" uid="uid://so3xpl0df0sc" path="res://Sprites/Characters/Enemies/ant-sheet.png" id="1_3vc7g"]
[ext_resource type="Script" uid="uid://da6mss2xnk4bn" path="res://Scripts/Entities/ant.gd" id="1_4ydk5"]
[ext_resource type="PackedScene" uid="uid://cdnmaw550r223" path="res://Scenes/UI/hp_bar.tscn" id="3_2itxg"]
[ext_resource type="PackedScene" uid="uid://bml8o3fl7yfw0" path="res://Scenes/Components/health_component.tscn" id="3_wtaqj"]
[ext_resource type="Shader" uid="uid://7i1wxshtsd8b" path="res://Resources/Shaders/hit_flash.tres" id="4_jbatd"]
[ext_resource type="PackedScene" uid="uid://mca7y2rl04ft" path="res://Scenes/Components/hit_box_component.tscn" id="4_yntpf"]
[ext_resource type="Texture2D" uid="uid://d0bbjhesy6lg4" path="res://Sprites/Effects/enemy-deadth.png" id="5_8l72l"]
[ext_resource type="PackedScene" uid="uid://bb8nlyevsjr62" path="res://Scenes/Components/attack_component.tscn" id="5_yntpf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ae3vd"]
radius = 9.0
height = 27.860697

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ox3j0"]
shader = ExtResource("4_jbatd")
shader_parameter/enabled = false
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_p3gn3"]
radius = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f7xtn"]
radius = 9.0
height = 28.0

[sub_resource type="Animation" id="Animation_x47ow"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_3vc7g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pivot/Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("pivot/Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0uss2"]
resource_name = "death"
length = 0.60001004
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_8l72l")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pivot/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_h3mn3"]
resource_name = "default"
length = 0.80001
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_3vc7g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot/Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot/Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pivot/Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("pivot/Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sela2"]
_data = {
&"RESET": SubResource("Animation_x47ow"),
&"death": SubResource("Animation_0uss2"),
&"default": SubResource("Animation_h3mn3")
}

[node name="Ant" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_4ydk5")
speed = 50.0

[node name="AntCollision" type="CollisionShape2D" parent="."]
rotation = 1.5707964
scale = Vector2(1, 1.005)
shape = SubResource("CapsuleShape2D_ae3vd")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("hp_bar") instance=ExtResource("3_wtaqj")]
position = Vector2(0, -16)
MAX_HEALTH = 30.0
hp_bar = NodePath("HPBar")

[node name="HPBar" parent="HealthComponent" instance=ExtResource("3_2itxg")]

[node name="pivot" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="pivot"]
material = SubResource("ShaderMaterial_ox3j0")
texture = ExtResource("1_3vc7g")
offset = Vector2(3, -5)
flip_h = true
hframes = 8

[node name="RayCastDown" type="RayCast2D" parent="pivot"]
unique_name_in_owner = true
position = Vector2(3, 0)
target_position = Vector2(0, 16)

[node name="RayCastAhead" type="RayCast2D" parent="pivot"]
unique_name_in_owner = true
target_position = Vector2(21, 0)

[node name="HitBoxComponent" parent="pivot" node_paths=PackedStringArray("health_component") instance=ExtResource("4_yntpf")]
collision_layer = 8
collision_mask = 0
health_component = NodePath("../../HealthComponent")
invincibility_time = 0.2

[node name="HitBox" type="CollisionShape2D" parent="pivot/HitBoxComponent"]
position = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_p3gn3")
debug_color = Color(0.25649512, 0.6281854, 0.2717998, 0.41960785)

[node name="AttackComponent" parent="pivot" instance=ExtResource("5_yntpf")]
collision_layer = 0
collision_mask = 2

[node name="AttackCollision" type="CollisionShape2D" parent="pivot/AttackComponent"]
position = Vector2(0.5, 0.5)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_f7xtn")
debug_color = Color(0.9382652, 0.11452209, 0.55225664, 0.41960785)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sela2")
}
autoplay = "default"

[connection signal="hp_changed" from="HealthComponent" to="." method="_on_health_changed"]
